--- a/rgpd.html
+++ b/rgpd.html
@@ -76,45 +76,63 @@
       text-align: center;
       margin: 20px 0;
     }
+    a {
+      color: #0b5ed7;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
-  <div className="container">
+  <div class="container">
     <h1>Implementa RGPD en tu Sitio Web</h1>
-    <p>Con <strong>captcha.gratis</strong>, añadir un sistema de gestión de cookies compatible con el RGPD es fácil y gratuito. Sigue estos pasos para que tu sitio cumpla con la normativa de protección de datos y ofrezca una mejor experiencia a tus usuarios.</p>
+    <p>Con <strong>captcha.gratis</strong>, añadir un sistema de gestión de cookies compatible con el RGPD es fácil y gratuito. Sigue estos pasos para que tu sitio cumpla con la normativa de protección de datos y ofrezca una mejor experiencia a tus usuarios. <a href="https://github.com/fmontesinos/captcha/blob/main/rgpd.html" target="_blank">Ver o descargar este ejemplo en GitHub</a>.</p>
 
     <h2>¿Qué es el RGPD y por qué lo necesitas?</h2>
     <p>El RGPD (Reglamento General de Protección de Datos) es una ley que protege la privacidad de los usuarios en internet. Si tu sitio web usa cookies (por ejemplo, para analizar visitas o mostrar anuncios), necesitas pedir permiso a tus visitantes. Nuestro script te ayuda a hacerlo de forma sencilla, mostrando un modal donde los usuarios pueden elegir qué cookies aceptar.</p>
 
     <h2>Cómo añadir el sistema RGPD a tu web</h2>
-    <div className="step">
+    <div class="step">
       <h3>Paso 1: Copia el código</h3>
-      <p>Añade este código al final del <code>&lt;body&gt;</code> de tu página HTML. Este script muestra un modal de cookies a tus visitantes.</p>
-      <div className="code-block">
-        <button className="copy-button" onclick="copyCode('code1')">Copiar</button>
+      <p>Añade este código al final del <code>&lt;body&gt;</code> de tu página HTML. Este script muestra un modal de cookies a tus visitantes. Usa <code>token=test</code> para pruebas.</p>
+      <div class="code-block">
+        <button class="copy-button" onclick="copyCode('code1')">Copiar</button>
         <pre id="code1">
-&lt;script src="https://captcha.gratis/rgpd.js.php?lang=es&force=true&policyUrl=/politica-cookies"&gt;&lt;/script&gt;
+&lt;script src="https://captcha.gratis/rgpd.js.php?lang=es&force=true&policyUrl=/politica-cookies&token=test"&gt;&lt;/script&gt;
         </pre>
       </div>
     </div>
 
-    <div className="step">
-      <h3>Paso 2: Personaliza el idioma (opcional)</h3>
-      <p>El parámetro <code>lang</code> controla el idioma del modal. Usa <code>es</code> para español, <code>en</code> para inglés, o <code>fr</code> para francés. Por ejemplo, para inglés:</p>
-      <div className="code-block">
-        <button className="copy-button" onclick="copyCode('code2')">Copiar</button>
+    <div class="step">
+      <h3>Paso 2: Obtén un token para tu sitio</h3>
+      <p>El parámetro <code>token</code> identifica tu sitio web. Para pruebas, usa <code>token=test</code>. Cuando estés listo para usar el script en tu sitio real, <a href="https://captcha.gratis/register" target="_blank">regístrate en captcha.gratis</a> para obtener un token único. Luego, reemplaza <code>test</code> con tu token. Ejemplo:</p>
+      <div class="code-block">
+        <button class="copy-button" onclick="copyCode('code2')">Copiar</button>
         <pre id="code2">
-&lt;script src="https://captcha.gratis/rgpd.js.php?lang=en&force=true&policyUrl=/politica-cookies"&gt;&lt;/script&gt;
+&lt;script src="https://captcha.gratis/rgpd.js.php?lang=es&force=true&policyUrl=/politica-cookies&token=TU_TOKEN_AQUI"&gt;&lt;/script&gt;
         </pre>
       </div>
     </div>
 
-    <div className="step">
-      <h3>Paso 3: Añade acciones basadas en el consentimiento (opcional)</h3>
-      <p>Si usas herramientas como Google Analytics o anuncios, puedes cargarlas solo si el usuario da su consentimiento. Añade este código antes del script RGPD:</p>
-      <div className="code-block">
-        <button className="copy-button" onclick="copyCode('code3')">Copiar</button>
+    <div class="step">
+      <h3>Paso 3: Personaliza el idioma (opcional)</h3>
+      <p>El parámetro <code>lang</code> controla el idioma del modal. Usa <code>es</code> para español, <code>en</code> para inglés, o <code>fr</code> para francés. Por ejemplo, para inglés:</p>
+      <div class="code-block">
+        <button class="copy-button" onclick="copyCode('code3')">Copiar</button>
         <pre id="code3">
+&lt;script src="https://captcha.gratis/rgpd.js.php?lang=en&force=true&policyUrl=/politica-cookies&token=test"&gt;&lt;/script&gt;
+        </pre>
+      </div>
+    </div>
+
+    <div class="step">
+      <h3>Paso 4: Añade acciones basadas en el consentimiento (opcional)</h3>
+      <p>Si usas herramientas como Google Analytics o anuncios, puedes cargarlas solo si el usuario da su consentimiento. Añade este código antes del script RGPD:</p>
+      <div class="code-block">
+        <button class="copy-button" onclick="copyCode('code4')">Copiar</button>
+        <pre id="code4">
 &lt;script&gt;
   window.onConsentChange = function(preferences) {
     console.log('Consentimiento actualizado:', preferences);
@@ -132,30 +150,30 @@
       </div>
     </div>
 
-    <div className="step">
-      <h3>Paso 4: Prueba el modal</h3>
+    <div class="step">
+      <h3>Paso 5: Prueba el modal</h3>
       <p>Haz clic en el botón de abajo para ver cómo aparece el modal de cookies en tu sitio. Puedes probarlo en diferentes idiomas cambiando el parámetro <code>lang</code>.</p>
-      <div className="example">
-        <button className="button" onclick="window.showRGPDModal()">Probar el Modal de Cookies</button>
+      <div class="example">
+        <button class="button" onclick="window.showRGPDModal()">Probar el Modal de Cookies</button>
       </div>
     </div>
 
     <h2>¿Dónde pegar el código?</h2>
     <p>Si usas un editor web (como WordPress, Wix, o un editor HTML), busca la sección donde puedes añadir código personalizado. Pega el script justo antes de la etiqueta <code>&lt;/body&gt;</code>. Por ejemplo:</p>
-    <div className="code-block">
-      <button className="copy-button" onclick="copyCode('code4')">Copiar</button>
-      <pre id="code4">
+    <div class="code-block">
+      <button class="copy-button" onclick="copyCode('code5')">Copiar</button>
+      <pre id="code5">
 &lt;body&gt;
   &lt;h1&gt;Mi Sitio Web&lt;/h1&gt;
   &lt;p&gt;Bienvenido a mi sitio.&lt;/p&gt;
 
-  &lt;script src="https://captcha.gratis/rgpd.js.php?lang=es&force=true&policyUrl=/politica-cookies"&gt;&lt;/script&gt;
+  &lt;script src="https://captcha.gratis/rgpd.js.php?lang=es&force=true&policyUrl=/politica-cookies&token=test"&gt;&lt;/script&gt;
 &lt;/body&gt;
       </pre>
     </div>
 
     <h2>¿Necesitas ayuda?</h2>
-    <p>Si tienes dudas o necesitas personalizar el script (por ejemplo, para producción o más dominios), consulta nuestra <a href="https://captcha.gratis/docs" target="_blank">documentación completa</a> o contáctanos en <a href="mailto:soporte@captcha.gratis">soporte@captcha.gratis</a>.</p>
+    <p>Si tienes dudas o necesitas personalizar el script, consulta nuestra <a href="https://captcha.gratis/docs" target="_blank">documentación completa</a>, <a href="https://github.com/fmontesinos/captcha/blob/main/rgpd.html" target="_blank">descarga este ejemplo en GitHub</a>, o contáctanos en <a href="mailto:soporte@captcha.gratis">soporte@captcha.gratis</a>.</p>
   </div>
 
   <script>
@@ -182,6 +200,6 @@
   </script>
 
   <!-- Incluir el script RGPD -->
-  <script src="https://captcha.gratis/rgpd.js.php?lang=es&force=true&policyUrl=/politica-cookies"></script>
+  <script src="https://captcha.gratis/rgpd.js.php?lang=es&force=true&policyUrl=/politica-cookies&token=test"></script>
 </body>
 </html>
